--- a/package.json
+++ b/package.json
@@ -1,39 +1,56 @@
 {
-  "name": "leakhub",
-  "version": "1.0.0",
-  "description": "AI System Prompt Discovery Platform - Community hub for crowd-sourced system prompt leak verification",
-  "main": "index.html",
+  "name": "leakhub_convex",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
+    "dev": "npm-run-all --parallel dev:frontend dev:backend",
+    "dev:frontend": "vite --open",
+    "dev:backend": "convex dev",
+    "predev": "convex dev --until-success && convex dev --once --run-sh \"node setup.mjs --once\" && convex dashboard",
+    "build": "tsc --noEmit && vite build",
+    "lint": "tsc && eslint .  --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "lint": "eslint . --ext .js,.html",
-    "format": "prettier --write .",
-    "serve": "python3 -m http.server 8000"
+    "deploy": "npm run build && wrangler pages deploy",
+    "cf-typegen": "wrangler types"
   },
-  "keywords": [
-    "ai",
-    "system-prompt",
-    "transparency",
-    "crowdsourcing",
-    "verification",
-    "community",
-    "github-pages"
-  ],
-  "author": "Elder Plinius",
-  "license": "MIT",
+  "dependencies": {
+    "@convex-dev/auth": "^0.0.90",
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-checkbox": "^1.3.3",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-slot": "^1.2.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "convex": "^1.28.0",
+    "lucide-react": "^0.547.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^7.9.4",
+    "tailwind-merge": "^3.3.1"
+  },
   "devDependencies": {
-    "vite": "^4.4.9",
-    "eslint": "^8.48.0",
-    "prettier": "^3.0.3"
-  },
-  "dependencies": {},
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/elder-plinius/LEAKHUB.git"
-  },
-  "homepage": "https://elder-plinius.github.io/LEAKHUB",
-  "bugs": {
-    "url": "https://github.com/elder-plinius/LEAKHUB/issues"
+    "@cloudflare/vite-plugin": "^1.13.17",
+    "@convex-dev/eslint-plugin": "^1.0.0",
+    "@eslint/js": "^9.21.0",
+    "@tailwindcss/vite": "^4.1.16",
+    "@types/node": "^22.18.12",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
+    "@vitejs/plugin-react": "^5.0.0",
+    "dotenv": "^16.4.7",
+    "eslint": "^9.21.0",
+    "eslint-plugin-react-hooks": "^5.1.0",
+    "eslint-plugin-react-refresh": "^0.4.19",
+    "globals": "^15.15.0",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^3.5.3",
+    "tailwindcss": "^4.1.16",
+    "tw-animate-css": "^1.4.0",
+    "typescript": "~5.7.2",
+    "typescript-eslint": "^8.24.1",
+    "vite": "^6.2.0",
+    "wrangler": "^4.45.2"
   }
 }
