🔧 FIX: Updated deployment scripts to use npx for wrangler commands in package.json

--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "build": "tsc --noEmit && vite build",
     "lint": "tsc && eslint .  --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "deploy": "npm run build && wrangler pages deploy",
-    "cf-typegen": "wrangler types"
+    "deploy": "npm run build && npx wrangler pages deploy",
+    "cf-typegen": "npx wrangler types"
   },
   "dependencies": {
     "@convex-dev/auth": "^0.0.90",
