🔧 UPDATE: Enhanced wrangler.jsonc with routing configuration for leakhub.ai and added crons module import in api.d.ts for improved functionality.

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -10,4 +10,10 @@
   },
   // Required compatibility date for Workers runtime features
   "compatibility_date": "2025-06-05",
+  "routes": [
+    {
+      "pattern": "**",
+      "zone_name": "leakhub.ai",
+    },
+  ],
 }
